2004-06-01  William Jon McCann  <mccann@jhu.edu>

	* e-shell-window-commands.c (e_shell_window_commands_setup):
	Add listener for the ViewToolbar command.
	(view_toolbar_item_toggled_handler):
	New function to handle toggling toolbar visibility and saving state.
	
	* e-shell-window.c (e_shell_window_save_defaults): 
	Save the status of the toolbar visibility.
	(setup_widgets): Set initial state of toolbar visibility.

	* apps_evolution_shell.schemas.in.in: Added schema for toolbar_visible.

2004-06-01  Christophe Fergeau  <teuf@gnome.org>
 	
 	* e-shell-importer.c: sort the various available importer plugins by
  	name in the importer druid combo box so that the list doesn't change
  	from one evolution run to another. 
	
2004-05-27  Not Zed  <NotZed@Ximian.com>

	** See #58827.

	* e-shell-window.c (switch_view): api change
	
	* e-shell.c (impl_Shell_handleURI): Fixed for api change.
	(impl_Shell_handleURI): check the component alias for an alternate
	uri schema path.  'quick hack' for activating components from
	command line.  This may, or may not, continue to function.

	* e-component-registry.c (e_component_registry_peek_info): added
	an id for search type.
	(e_component_registry_peek_info_for_uri_schema): ^ makes this
	redundant, removed.
	(e_component_registry_activate): fixed for api change.

2004-05-28  Rodney Dawes  <dobey@novell.com>

	* e-shell-importer.c (e_shell_importer_start_import):
	Set the default window size for the druid to 480x320

2004-05-28  JP Rosevear  <jpr@novell.com>

	* e-shell-window-commands.c: remove bogus include

2004-05-28  William Jon McCann  <mccann@jhu.edu>

       * Makefile.am (evolution_SOURCES): Remove e-shell-about-box.

       * e-shell-window-commands.c (command_about_box, about_box_new):
       Use GNOME about box.

2004-05-27  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (EXTRA_DIST): Add $(error_i18n) for "make dist"

2004-05-27  Rodney Dawes  <dobey@novell.com>
