@@ -1,3 +1,9 @@
+2004-06-04  JP Rosevear  <jpr@novell.com>
+
+	Fixes #59361
+	
+	* e-sidebar.c (layout_buttons): handle 0 and 1 buttons properly
+
 2004-06-01  William Jon McCann  <mccann@jhu.edu>
 
 	* e-shell-window-commands.c (e_shell_window_commands_setup):
